# selenium-youtube-scraper

./: .replit  LICENSE  README.md  pyproject.toml  replit.nix  scraper.py  scratch.py  trending.csv  trending.html
